RESOLVED FIXED275675
[JSC] Not generating code for PolyCall thunk
https://bugs.webkit.org/show_bug.cgi?id=275675
Summary [JSC] Not generating code for PolyCall thunk
Yusuke Suzuki
Reported 2024-06-19 20:50:51 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-06-19 20:51:10 PDT
Yusuke Suzuki
Comment 2 2024-06-19 20:52:57 PDT
EWS
Comment 3 2024-06-20 10:33:54 PDT
Committed 280207@main (03d14264b528): <https://commits.webkit.org/280207@main> Reviewed commits have been landed. Closing PR #29990 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.